# ChemUnityQA

./: Agent.ipynb  ChemUnityRAG.ipynb  GraphRag.py  README.md  base_agent.ipynb  graphRAG.ipynb  langchain_queries.py_exclude  main.py  pyproject.toml  requirements.txt  scriptsdemo.py
LGPromptABtests/: 1.Advanced-GreatOutput.txt  3.LGwithRefcodes-POOR.txt
agent/: main_agent.py  orchestrator_graph.py  updated_neo4j_import.py
agent/GraphTool/: CommunitySummaries.ipynb  GraphAgent.ipynb  GraphRetriever.py  kg_agent.py
chroma_db_mof_summaries/: chroma.sqlite3
chroma_db_mof_summaries/45126bb7-3057-4528-9839-ba13e0fd575f/: index_metadata.pickle
chroma_mof/: chroma.sqlite3
configs_tobias/: query_pack.yaml  settings.yaml
ensemble/CH4DC/: 0.pkl  2.pkl  3.pkl  4.pkl  6.pkl  8.pkl  9.pkl
ensemble/band gap/: 1.pkl  4.pkl  5.pkl  7.pkl  9.pkl
ensemble/logKH_CH4/: 0.pkl  2.pkl  3.pkl  6.pkl  9.pkl
ensemble/logKH_CO2/: 2.pkl  4.pkl  5.pkl  6.pkl  7.pkl  9.pkl
ensemble/pure_uptake_CO2_298.00_15000/: 0.pkl  1.pkl  2.pkl  4.pkl  5.pkl
ensemble/pure_uptake_CO2_298.00_1600000/: 0.pkl  2.pkl  4.pkl  6.pkl  7.pkl  8.pkl  9.pkl
ensemble/pure_uptake_methane_298.00_580000/: 0.pkl  8.pkl  9.pkl
ensemble/pure_uptake_methane_298.00_6500000/: 0.pkl  4.pkl  7.pkl  9.pkl
hackathon_graph_data/final data/: .~lock.MOF_names_and_CSD_codes.csv#  MOF_names_and_CSD_codes.csv
ml/: construct_ensemble.py  ensemble_eval.py  featurizer.py  pipeline.py
prompts/: planner_system.txt  summarizer_system.txt
tools_tobias/: cypher_templates.py  cypher_tool.py  vector_tool.py
(+97 files in other folders)
