[project]
name = "chemunityqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.21",
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.3.29",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "loguru>=0.7.3",
    "matminer>=0.9.3",
    "molsimplify>=1.8.0",
    "neo4j>=5.28.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pymatgen>=2025.6.14",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "xgboost>=3.0.5",
]
